tests/models/enum/named/i32/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        i32
    ),
}
fn main() {}
